# iqdb-filter

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: filter_bench.rs
dev/: DIRECTIVES.md  ROADMAP.md
docs/: API.md
docs/release/: v0.1.0.md  v0.1.5.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v1.0.0.md
examples/: absent_fields.rs  filtered_scan.rs  indexed_filtering.rs  strategy_selection.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: robustness.rs  superset.rs
fuzz/src/: lib.rs
src/: eval.rs  evaluator.rs  index.rs  lib.rs  selectivity.rs  strategy.rs
tests/: conformance.rs  consumer_simulation.rs  properties.rs
